[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/mapa_casa_interiores/700x511_SliderInterior.png" type="Texture" id=1]
[ext_resource path="res://juego/caja_dialogos.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cinematicas/inicio_introduccion.gd" type="Script" id=3]
[ext_resource path="res://Assets/t√≠tulo-1.png" type="Texture" id=4]
[ext_resource path="res://Assets/fuentes/Pixeled.ttf" type="DynamicFontData" id=5]

[sub_resource type="TileSet" id=1]
0/name = "700x511_SliderInterior.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 51, 48, 541, 365 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "cargaTitulo"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "c_a"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "cargaTitulo"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="inicio_introduccion" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -262152, 0, 0, -327680, 0, 0, -327672, 0, 0, -327664, 0, 0, 65528, 0, 0, 0, 0, 0, 8, 0, 0, 16, 0, 0, 393208, 0, 0, 327680, 0, 0, 327688, 0, 0, 327696, 0, 0, 720888, 0, 0, 655360, 0, 0, 655367, 0, 0, 655368, 0, 0, 655376, 0, 0 )

[node name="caja_dialogos" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 517.0
margin_top = 575.0
margin_right = 517.0
margin_bottom = 575.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 517, 159 )
scale = Vector2( 1.70435, 2.06863 )
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimationPlayer" parent="Sprite"]
anims/RESET = SubResource( 2 )
anims/cargaTitulo = SubResource( 3 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 336.0
margin_top = 265.0
margin_right = 690.0
margin_bottom = 311.0
custom_fonts/font = SubResource( 4 )
text = "Creado por SERCH ONODERA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite2" type="AnimationPlayer" parent="Label"]
root_node = NodePath("../../Sprite")
anims/RESET = SubResource( 5 )
anims/c_a = SubResource( 6 )
anims/cargaTitulo = SubResource( 7 )
